<resources>
    <string name="app_name">DahMotta</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="button_undo">undo</string>
    <string name="search_title">Search</string>
    <string name="action_addAlerts">Add Alerts</string>
    <string name="action_removeAlerts">Remove Alerts</string>
    <string name="action_updateAlerts">Update Alerts</string>
    <string name="msg_failed">Error to connect to server</string>
    <string name="pref_example_switch">Example Switch</string>
    <string name="pref_example_switch_summary">Example Switch Summary</string>
    <string name="pref_server_ip">Server IP</string>
    <string name="pref_server_ip_default">192.168.1.1</string>
    <string name="app_label">Search</string>
    <string name="search_hint">Search Hing</string>
    <string name="app_name_long">DahMotta LTDA Demo</string>
    <string name="version_number">Version</string>
    <string name="about_author_names">João Carlos Silva dos Santos</string>
    <string name="unitec_url" translatable="false"><a href="http://www.unitecgroup.net">Unitec S.A Website</a></string>
    <string name="more_info">More info can be found at</string>
    <string name="privacy_friendly">This application belongs to DahMotta LTDA developed by João Carlos Silva dos Santos. Images copyright DahMotta LTDA and Google Inc.</string>
    <string name="about_author">Authors</string>
    <string name="about">About</string>
    <string name="action_sendAlerts">send</string>
    <string name="action_getAlerts">Get Alerts</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_getTime">Get Time</string>
    <string name="action_setTime">Set Time</string>
    <string name="TimePattern">Weekday, HH:MM</string>
    <string name="Time">Time</string>
    <string name="action_changePassword">Change Password</string>
    <string name="password">Password</string>
    <string name="action_resetAlerts">Reset</string>
</resources>
