<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item android:id="@+id/action_search"-->
        <!--android:title="@string/search_title"-->
        <!--android:icon="@android:drawable/ic_menu_search"-->
        <!--app:showAsAction="ifRoom|collapseActionView"-->
        <!--android:actionViewClass="android.support.v7.widget.SearchView" />-->
    <item
        android:id="@+id/action_addAlerts"
        android:orderInCategory="100"
        android:title="@string/action_addAlerts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_removeAlerts"
        android:orderInCategory="100"
        android:title="@string/action_removeAlerts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_updateAlerts"
        android:orderInCategory="100"
        android:title="@string/action_updateAlerts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sendAlerts"
        android:orderInCategory="100"
        android:title="@string/action_sendAlerts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_getAlerts"
        android:orderInCategory="100"
        android:title="@string/action_getAlerts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_setTime"
        android:orderInCategory="100"
        android:title="@string/action_setTime"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_getTime"
        android:orderInCategory="100"
        android:title="@string/action_getTime"
        app:showAsAction="never" />
</menu>
