<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Example Category">
        <SwitchPreference
            android:id="@+id/pref_example_switch"
            android:key="pref_example_switch"
            android:title="@string/pref_example_switch"
            android:summary="@string/pref_example_switch_summary"
            android:defaultValue="false"/>
        <Preference android:title="Test Setting"
            android:summary="Text Summary"/>
    </PreferenceCategory>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_server_ip_default"
        android:inputType="textCapWords"
        android:key="pref_server_ip"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_server_ip" />

    <!--
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />
        -->

</PreferenceScreen>
